# budget-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.backend-tests.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.envs/: .env.example
.github/workflows/: main.yaml
apps/: urls.py
apps/budgets/: factories.py  filters.py  models.py
apps/budgets/api/: serializers.py  tests.py  urls.py  views.py
apps/budgets/migrations/: 0001_initial.py
apps/categories/: admin.py  factories.py  models.py
apps/categories/migrations/: 0001_initial.py
apps/finances/: admin.py  factories.py  models.py
apps/finances/api/: serializers.py  urls.py  views.py
apps/finances/migrations/: 0001_initial.py  0002_auto_20230616_1354.py
apps/users/: factories.py  models.py
apps/users/api/: permissions.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/utils/: mixins.py  models.py
compose/django/: Dockerfile  Dockerfile.test  start.sh
config/: settings.py  urls.py
config/management/commands/: load_fixtures.py
config/settings/: core.py  local.py
fixtures/: 1_users.py  2_groups.py  3_budgets.py  3_categories.py  4_categories_and_finances.py
requirements/: base.txt  local.txt
