[tool.poetry]
name = "budget-api"
version = "0.1.0"
description = ""
authors = ["Jakub Filistyński <filistynskikuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
